--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="website\ycp.jpg" alt="DKTE YCP" width="100%" height="90%">
+      <img src="mega project\website\ycp.jpg" alt="DKTE YCP" width="100%" height="90%">
     </div>
     <div class="carousel-item">
-      <img src="website\ss.PNG" alt="Chicago" width="30%" height="30%">
+      <img src="mega project\website\ss.png" alt="Chicago" width="30%" height="30%">
     </div>
     <div class="carousel-item">
-      <img src="website\ss1.jpg" alt="New York" width="30%" height="30%">
+      <img src="mega project\website\ss1.jpg" alt="New York" width="30%" height="30%">
     </div>
   </div>
 
